@@ -2,6 +2,11 @@ CHANGELOG
 
 When		Who		What
 ======================================================================================
+2017-03-25 	Richard Forth   Downgraded some warnings to advisory messages.
+				Specificlly where vhost count is greater than
+				MaxClients / MaxRequestWorkers, also changed
+				the wording slightly.
+2017-03-25 	Richard Forth   Added a key to the usage() output, see --help
 2017-03-25 	Richard Forth   Fixed some warnings and advisory messages not
 				being hidden when using --nowarn or --report oprtions.
 2017-03-25 	Richard Forth   Made the commands I think that are likely to
